--- a/DnDTeamProject/DnDTeamProject.vcxproj
+++ b/DnDTeamProject/DnDTeamProject.vcxproj
@@ -148,40 +148,32 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Character.h" />
-    <ClInclude Include="CharacterObserver.h" />
+    <ClInclude Include="Armor.h" />
+    <ClInclude Include="Belt.h" />
+    <ClInclude Include="Boots.h" />
+    <ClInclude Include="Bracers.h" />
     <ClInclude Include="Dice.h" />
-    <ClInclude Include="Enchant.h" />
-    <ClInclude Include="Enums.h" />
-    <ClInclude Include="Equipment.h" />
     <ClInclude Include="Errors.h" />
+    <ClInclude Include="Helmet.h" />
     <ClInclude Include="Item.h" />
-    <ClInclude Include="ItemContainer.h" />
-    <ClInclude Include="Map.h" />
-    <ClInclude Include="MapCharacter.h" />
-    <ClInclude Include="MapContainer.h" />
-    <ClInclude Include="MapObserver.h" />
-    <ClInclude Include="Observable.h" />
-    <ClInclude Include="Observer.h" />
+    <ClInclude Include="Names.h" />
+    <ClInclude Include="Ring.h" />
+    <ClInclude Include="Shield.h" />
+    <ClInclude Include="Types.h" />
     <ClInclude Include="Weapon.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Character.cpp" />
-    <ClCompile Include="CharacterObserver.cpp" />
+    <ClCompile Include="Armor.cpp" />
+    <ClCompile Include="Belt.cpp" />
+    <ClCompile Include="Boots.cpp" />
+    <ClCompile Include="Bracers.cpp" />
     <ClCompile Include="Dice.cpp" />
-    <ClCompile Include="Enchant.cpp" />
-    <ClCompile Include="Enums.cpp" />
-    <ClCompile Include="Equipment.cpp" />
     <ClCompile Include="Errors.cpp" />
+    <ClCompile Include="Helmet.cpp" />
     <ClCompile Include="Item.cpp" />
-    <ClCompile Include="ItemContainer.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Map.cpp" />
-    <ClCompile Include="MapCharacter.cpp" />
-    <ClCompile Include="MapContainer.cpp" />
-    <ClCompile Include="MapObserver.cpp" />
-    <ClCompile Include="Menu.cpp" />
-    <ClCompile Include="Observable.cpp" />
+    <ClCompile Include="Ring.cpp" />
+    <ClCompile Include="Shield.cpp" />
     <ClCompile Include="Weapon.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
