--- a/DnDTeamProject/DnDTeamProject.vcxproj
+++ b/DnDTeamProject/DnDTeamProject.vcxproj
@@ -156,11 +156,13 @@
     <ClInclude Include="Boots.h" />
     <ClInclude Include="Bracers.h" />
     <ClInclude Include="Character.h" />
+    <ClInclude Include="CharacterBuilder.h" />
     <ClInclude Include="Dice.h" />
     <ClInclude Include="Errors.h" />
     <ClInclude Include="Helmet.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="ItemContainer.h" />
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="Names.h" />
     <ClInclude Include="Ring.h" />
     <ClInclude Include="Shield.h" />
@@ -173,12 +175,14 @@
     <ClCompile Include="Boots.cpp" />
     <ClCompile Include="Bracers.cpp" />
     <ClCompile Include="Character.cpp" />
+    <ClCompile Include="CharacterBuilder.cpp" />
     <ClCompile Include="Dice.cpp" />
     <ClCompile Include="Errors.cpp" />
     <ClCompile Include="Helmet.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="ItemContainer.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Ring.cpp" />
     <ClCompile Include="Shield.cpp" />
     <ClCompile Include="Weapon.cpp" />
