--- a/DnDTeamProject/DnDTeamProject.vcxproj
+++ b/DnDTeamProject/DnDTeamProject.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="Errors.h" />
     <ClInclude Include="Helmet.h" />
     <ClInclude Include="Item.h" />
+    <ClInclude Include="ItemBuilder.h" />
     <ClInclude Include="ItemContainer.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Names.h" />
@@ -180,6 +181,7 @@
     <ClCompile Include="Errors.cpp" />
     <ClCompile Include="Helmet.cpp" />
     <ClCompile Include="Item.cpp" />
+    <ClCompile Include="ItemBuilder.cpp" />
     <ClCompile Include="ItemContainer.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Menu.cpp" />
