--- a/DnDTeamProject/DnDTeamProject.vcxproj
+++ b/DnDTeamProject/DnDTeamProject.vcxproj
@@ -157,6 +157,10 @@
     <ClInclude Include="Bracers.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="CharacterBuilder.h" />
+    <ClInclude Include="CharacterObserver.h" />
+    <ClInclude Include="Chest.h" />
+    <ClInclude Include="Cursor.h" />
+    <ClInclude Include="CursorObserver.h" />
     <ClInclude Include="Dice.h" />
     <ClInclude Include="Errors.h" />
     <ClInclude Include="FileIO.h" />
@@ -165,8 +169,13 @@
     <ClInclude Include="ItemArchive.h" />
     <ClInclude Include="ItemBuilder.h" />
     <ClInclude Include="ItemContainer.h" />
+    <ClInclude Include="Map.h" />
+    <ClInclude Include="MapBuilder.h" />
+    <ClInclude Include="MapObserver.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Names.h" />
+    <ClInclude Include="Observable.h" />
+    <ClInclude Include="Observer.h" />
     <ClInclude Include="Ring.h" />
     <ClInclude Include="SavedItems.h" />
     <ClInclude Include="Shield.h" />
@@ -180,6 +189,10 @@
     <ClCompile Include="Bracers.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="CharacterBuilder.cpp" />
+    <ClCompile Include="CharacterObserver.cpp" />
+    <ClCompile Include="Chest.cpp" />
+    <ClCompile Include="Cursor.cpp" />
+    <ClCompile Include="CursorObserver.cpp" />
     <ClCompile Include="Dice.cpp" />
     <ClCompile Include="Errors.cpp" />
     <ClCompile Include="FileIO.cpp" />
@@ -189,7 +202,11 @@
     <ClCompile Include="ItemBuilder.cpp" />
     <ClCompile Include="ItemContainer.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Map.cpp" />
+    <ClCompile Include="MapBuilder.cpp" />
+    <ClCompile Include="MapObserver.cpp" />
     <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="Observable.cpp" />
     <ClCompile Include="Ring.cpp" />
     <ClCompile Include="Shield.cpp" />
     <ClCompile Include="Weapon.cpp" />
