--- a/DnDTeamProject/DnDTeamProject.vcxproj
+++ b/DnDTeamProject/DnDTeamProject.vcxproj
@@ -155,6 +155,8 @@
     <ClInclude Include="Belt.h" />
     <ClInclude Include="Boots.h" />
     <ClInclude Include="Bracers.h" />
+    <ClInclude Include="Campaign.h" />
+    <ClInclude Include="CampaignBuilder.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="CharacterBuilder.h" />
     <ClInclude Include="CharacterObserver.h" />
@@ -187,6 +189,8 @@
     <ClCompile Include="Belt.cpp" />
     <ClCompile Include="Boots.cpp" />
     <ClCompile Include="Bracers.cpp" />
+    <ClCompile Include="Campaign.cpp" />
+    <ClCompile Include="CampaignBuilder.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="CharacterBuilder.cpp" />
     <ClCompile Include="CharacterObserver.cpp" />
