--- a/DnDTeamProject/DnDTeamProject.vcxproj
+++ b/DnDTeamProject/DnDTeamProject.vcxproj
@@ -157,8 +157,10 @@
     <ClInclude Include="Bracers.h" />
     <ClInclude Include="Campaign.h" />
     <ClInclude Include="CampaignBuilder.h" />
+    <ClInclude Include="CampaignEditor.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="CharacterBuilder.h" />
+    <ClInclude Include="CharacterEditor.h" />
     <ClInclude Include="CharacterObserver.h" />
     <ClInclude Include="Chest.h" />
     <ClInclude Include="Cursor.h" />
@@ -173,6 +175,7 @@
     <ClInclude Include="ItemContainer.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="MapBuilder.h" />
+    <ClInclude Include="MapEditor.h" />
     <ClInclude Include="MapObserver.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Names.h" />
@@ -191,8 +194,10 @@
     <ClCompile Include="Bracers.cpp" />
     <ClCompile Include="Campaign.cpp" />
     <ClCompile Include="CampaignBuilder.cpp" />
+    <ClCompile Include="CampaignEditor.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="CharacterBuilder.cpp" />
+    <ClCompile Include="CharacterEditor.cpp" />
     <ClCompile Include="CharacterObserver.cpp" />
     <ClCompile Include="Chest.cpp" />
     <ClCompile Include="Cursor.cpp" />
@@ -208,6 +213,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="MapBuilder.cpp" />
+    <ClCompile Include="MapEditor.cpp" />
     <ClCompile Include="MapObserver.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Observable.cpp" />
