--- a/DnDTeamProject/DnDTeamProject.vcxproj
+++ b/DnDTeamProject/DnDTeamProject.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="Character.h" />
     <ClInclude Include="CharacterBuilder.h" />
     <ClInclude Include="CharacterEditor.h" />
+    <ClInclude Include="CharacterLogger.h" />
     <ClInclude Include="CharacterObserver.h" />
     <ClInclude Include="Chest.h" />
     <ClInclude Include="Cursor.h" />
@@ -169,6 +170,7 @@
     <ClInclude Include="Errors.h" />
     <ClInclude Include="FileIO.h" />
     <ClInclude Include="GameDirector.h" />
+    <ClInclude Include="GameLogger.h" />
     <ClInclude Include="Helmet.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="ItemArchive.h" />
@@ -177,6 +179,7 @@
     <ClInclude Include="Map.h" />
     <ClInclude Include="MapBuilder.h" />
     <ClInclude Include="MapEditor.h" />
+    <ClInclude Include="MapLogger.h" />
     <ClInclude Include="MapObserver.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Names.h" />
@@ -199,6 +202,7 @@
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="CharacterBuilder.cpp" />
     <ClCompile Include="CharacterEditor.cpp" />
+    <ClCompile Include="CharacterLogger.cpp" />
     <ClCompile Include="CharacterObserver.cpp" />
     <ClCompile Include="Chest.cpp" />
     <ClCompile Include="Cursor.cpp" />
@@ -216,6 +220,7 @@
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="MapBuilder.cpp" />
     <ClCompile Include="MapEditor.cpp" />
+    <ClCompile Include="MapLogger.cpp" />
     <ClCompile Include="MapObserver.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Observable.cpp" />
