semi-complete implementation. Game director actions not logged. having trouble with npc logging. have tried feeding the maps npc vector into my method but trying to log them gives me a read-access violation.

--- a/DnDTeamProject/DnDTeamProject.vcxproj
+++ b/DnDTeamProject/DnDTeamProject.vcxproj
@@ -211,6 +211,7 @@
     <ClCompile Include="Errors.cpp" />
     <ClCompile Include="FileIO.cpp" />
     <ClCompile Include="GameDirector.cpp" />
+    <ClCompile Include="GameLogger.cpp" />
     <ClCompile Include="Helmet.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="ItemArchive.cpp" />
