--- a/DnDTeamProject/DnDTeamProject.vcxproj
+++ b/DnDTeamProject/DnDTeamProject.vcxproj
@@ -182,6 +182,7 @@
     <ClInclude Include="Ring.h" />
     <ClInclude Include="SavedItems.h" />
     <ClInclude Include="Shield.h" />
+    <ClInclude Include="Strategy.h" />
     <ClInclude Include="Types.h" />
     <ClInclude Include="Weapon.h" />
   </ItemGroup>
@@ -215,6 +216,7 @@
     <ClCompile Include="Observable.cpp" />
     <ClCompile Include="Ring.cpp" />
     <ClCompile Include="Shield.cpp" />
+    <ClCompile Include="Strategy.cpp" />
     <ClCompile Include="Weapon.cpp" />
   </ItemGroup>
   <ItemGroup>
